Fixed overlapping of icon and nav

--- a/src/assets/styles/_mixins.scss
+++ b/src/assets/styles/_mixins.scss
@@ -17,9 +17,6 @@
   font-size: 45px;
   font-weight: 400;
   font-style: italic;
-  z-index: 10;
-  color: red;
-  z-index: 2;
 
   &.main-logo--open {
     color: $main-color;
@@ -32,7 +29,6 @@
   font-weight: lighter;
   list-style: none;
   font-size: 22px;
-  z-index: 1;
 }
 
 @mixin button {
@@ -100,7 +96,7 @@
     @include lora-text;
     font-size: 15px;
     opacity: 0.5;
-    z-index: -5;
+    z-index: -1;
   }
 
   :focus {
